--- a/shopweb/web/index.html
+++ b/shopweb/web/index.html
@@ -1,10 +1,10 @@
 <html>
  <head>
+  <link href="/styles/magnific-popup.css" rel="stylesheet" type="text/css"/>
+
   <link href="/styles/style.css" rel="stylesheet" type="text/css"/>
-  <link href='http://fonts.googleapis.com/css?family=Revalia' rel='stylesheet' type='text/css' />
   
   <script src="http://code.jquery.com/jquery-2.0.3.min.js" />
-  <script src="/scripts/productslist.js" />
  </head>
  
  <body>
@@ -15,88 +15,24 @@
 
 
  <div class="center">
-   <div id="columns">
-     <div class="center_column" id="center_column">
-       <div id="featured-products_block_center">
-          <div class="block_content">
-            <ul>
-              <li>
-                <div id="1" title="Diam nonummy" class="ajax_block_product" style="background-image: url('http://livedemo00.template-help.com/prestashop_34564/img/p/1-1-home.jpg')">
-                  <div class="price_tag">
-                    <div class="price_tag_text">Diam nonummy</div>
-                    <div class="price_tag_price">123.99 RON</div>
-                  </div>
-                </div>
-              </li>
-              <li>
-                 <div id="2" title="Breitling Chrono Avenger M1" class="ajax_block_product" style="background-image: url('http://livedemo00.template-help.com/prestashop_34564/img/p/2-4-home.jpg')">
-                  <div class="price_tag">
-                    <div class="price_tag_text">Breitling Chrono Avenger M1</div>
-                    <div class="price_tag_price">153.99 RON</div>
-                  </div>
-                </div>
-              </li>
-              <li>
-                 <div id="3" title="Breitling Chrono Avenger M2" class="ajax_block_product" style="background-image: url('http://livedemo00.template-help.com/prestashop_34564/img/p/3-7-home.jpg')">
-                  <div class="price_tag">
-                    <div class="price_tag_text">Breitling Chrono Avenger M2</div>
-                    <div class="price_tag_price">183.99 RON</div>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div id="4" title="Breitling Chronomat Evolution Gold" class="ajax_block_product" style="background-image: url('http://livedemo00.template-help.com/prestashop_34564/img/p/4-10-home.jpg')">
-                  <div class="price_tag">
-                    <div class="price_tag_text">Breitling Chronomat Evolution Gold</div>
-                    <div class="price_tag_price">453.99 RON</div>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div id="5" title="Breitling Cockpit" class="ajax_block_product" style="background-image: url('http://livedemo00.template-help.com/prestashop_34564/img/p/5-13-home.jpg')">
-                  <div class="price_tag">
-                    <div class="price_tag_text">Breitling Cockpit</div>
-                    <div class="price_tag_price">453.99 RON</div>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div id="6" title="Breitling Cockpit A49350" class="ajax_block_product" style="background-image: url('http://livedemo00.template-help.com/prestashop_34564/img/p/6-16-home.jpg')">
-                  <div class="price_tag">
-                    <div class="price_tag_text">Breitling Cockpit A49350</div>
-                    <div class="price_tag_price">455.99 RON</div>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div id="7" title="Breitling Montbrillant" class="ajax_block_product" style="background-image: url('http://livedemo00.template-help.com/prestashop_34564/img/p/7-19-home.jpg')">
-                  <div class="price_tag">
-                    <div class="price_tag_text">Breitling Montbrillant</div>
-                    <div class="price_tag_price">755.99 RON</div>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div id="8" title="Breitling SuperOcean Chrono" class="ajax_block_product" style="background-image: url('http://livedemo00.template-help.com/prestashop_34564/img/p/8-22-home.jpg')">
-                  <div class="price_tag">
-                    <div class="price_tag_text">"Breitling Montbrillant</div>
-                    <div class="price_tag_price">755.99 RON</div>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div id="9" title="Breitling SuperOcean Chrono" class="ajax_block_product" style="background-image: url('http://livedemo00.template-help.com/prestashop_34564/img/p/9-25-home.jpg')">
-                  <div class="price_tag">
-                    <div class="price_tag_text">"Breitling SuperOcean Chrono</div>
-                    <div class="price_tag_price">955.99 RON</div>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
+   <div class="products_list">
+      <ul>
+        <li class="item">
+          <a>
+            <div class="item_box">
+              <div class="price_tag">
+                <div class="price_tag_text"></div>
+                <div class="price_tag_price"></div>
+              </div>
+            </div>
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
+  
+  <script src="/scripts/magnific-popup.js" />
+  <script src="/scripts/productslist.js" />
+
  </body>
 </html>
