--- a/shopweb/web/index.html
+++ b/shopweb/web/index.html
@@ -17,7 +17,7 @@
  <div class="center">
    <div class="products_list">
       <ul>
-        <li class="item">
+        <li data-snip="item">
           <a>
             <div class="item_box">
               <div class="price_tag">
