--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -15,7 +15,25 @@
 
 
    <div class="center">
-       Hello
+     <div data-snip="title" id="product_title">
+       <span/>
+     </div>
+     
+     <div id="pleft">
+       <div data-snip="images">
+         <div class="detail_box">
+           <b:img/>
+         </div>
+         <ul>
+           <f:li>
+             <f:img class="thumb"/>
+           </f:li>
+         </ul>
+       </div>
+     </div>
+     <div id="pright">
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut orci lectus, adipiscing at cursus in, dapibus eu metus. Aliquam commodo, justo eget tempus consectetur, lacus nisi volutpat nulla, at iaculis nunc mauris non diam. Curabitur mattis cursus lectus ac feugiat. Vivamus vitae nulla sed mauris facilisis sagittis. Maecenas condimentum arcu et ipsum venenatis. 
+     </div>
    </div>
  </body>
 </html>
