--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -1,16 +1,26 @@
 <html>
  <head>
-  <link href="/styles/magnific-popup.css" rel="stylesheet" type="text/css"/>
 
   <link href="/styles/style.css" rel="stylesheet" type="text/css"/>
-  
-  <script src="http://code.jquery.com/jquery-2.0.3.min.js" />
+  <script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js" />
+  <script type="text/javascript" src="/scripts/productslist.js" />
+
  </head>
  
  <body>
  
    <div class="header">
-    <div id="site_name">B(u)y-Me</div>
+     <div id="site_name">B(u)y-Me</div>
+
+     <div id="cart_symbol">
+       <img src="/images/cart.png"/>
+     </div>   
+  
+     <div id="cart_popup">
+       <div id="cart_content">
+          Content in PopBox goes here :)
+       </div>
+     </div>
    </div>
 
 
@@ -32,7 +42,7 @@
        </div>
      </div>
      <div id="pright">
-         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut orci lectus, adipiscing at cursus in, dapibus eu metus. Aliquam commodo, justo eget tempus consectetur, lacus nisi volutpat nulla, at iaculis nunc mauris non diam. Curabitur mattis cursus lectus ac feugiat. Vivamus vitae nulla sed mauris facilisis sagittis. Maecenas condimentum arcu et ipsum venenatis. 
+       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut orci lectus, adipiscing at cursus in, dapibus eu metus. Aliquam commodo, justo eget tempus consectetur, lacus nisi volutpat nulla, at iaculis nunc mauris non diam. Curabitur mattis cursus lectus ac feugiat. Vivamus vitae nulla sed mauris facilisis sagittis. Maecenas condimentum arcu et ipsum venenatis. 
      </div>
    </div>
  </body>
