--- a/shopweb/web/index.html
+++ b/shopweb/web/index.html
@@ -3,6 +3,8 @@
 
   <link href="/styles/style.css" rel="stylesheet" type="text/css"/>
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js" />
+  <script type="text/javascript" src="/scripts/jquery.cookie.js" />
+  <script type="text/javascript" src="/scripts/cart.js" />
   <script type="text/javascript" src="/scripts/productslist.js" />
 
  </head>
@@ -10,15 +12,14 @@
  <body>
  
    <div class="header">
-     <div id="site_name">B(u)y-Me</div>
+     <div id="site_name">Handmade</div>
 
      <div id="cart_symbol">
-       <img src="/images/cart.png"/>
+       <a href="#"><img src="/images/cart.png"/></a>
      </div>   
   
      <div id="cart_popup">
         <div id="cart_content">
-          Content in PopBox goes here :)
         </div>
      </div>
    </div>
