--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -3,22 +3,24 @@
 
   <link href="/styles/style.css" rel="stylesheet" type="text/css"/>
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js" />
-  <script type="text/javascript" src="/scripts/productslist.js" />
+  <script type="text/javascript" src="/scripts/jquery.cookie.js" />
+  <script type="text/javascript" src="/scripts/purl.js" />
+  <script type="text/javascript" src="/scripts/cart.js" />
+  <script type="text/javascript" src="/scripts/product.js" />
 
  </head>
  
  <body>
  
    <div class="header">
-     <div id="site_name">B(u)y-Me</div>
+     <div id="site_name"><a href="/">Handmade</a></div>
 
      <div id="cart_symbol">
-       <img src="/images/cart.png"/>
+       <a href="#"><img src="/images/cart.png"/></a>
      </div>   
   
      <div id="cart_popup">
        <div id="cart_content">
-          Content in PopBox goes here :)
        </div>
      </div>
    </div>
@@ -26,7 +28,12 @@
 
    <div class="center">
      <div data-snip="title" id="product_title">
-       <span/>
+       <div id="title_text">
+         <span/>
+       </div>
+       <div id="add_to_cart_box">
+         <a id="add_to_cart" href="#"><h1>Add to cart</h1></a>
+       </div> 
      </div>
      
      <div id="pleft">
@@ -42,7 +49,9 @@
        </div>
      </div>
      <div id="pright">
-       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut orci lectus, adipiscing at cursus in, dapibus eu metus. Aliquam commodo, justo eget tempus consectetur, lacus nisi volutpat nulla, at iaculis nunc mauris non diam. Curabitur mattis cursus lectus ac feugiat. Vivamus vitae nulla sed mauris facilisis sagittis. Maecenas condimentum arcu et ipsum venenatis. 
+       <div id="prod_details">
+         <span data-snip="details"/>
+       </div>
      </div>
    </div>
  </body>
