--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -12,21 +12,26 @@
  <body>
  
    <div class="header">
-     <div id="site_name">Handmade</div>
+     <div id="site_name"><a href="/">Handmade</a></div>
 
-     <div id="cart_symbol">
-       <a href="#"><img src="/images/cart.png"/></a>
-     </div>   
-  
      <div id="cart_popup">
-        <div id="cart_content">
-        </div>
+       <div id="cart_content">
+       </div>
      </div>
    </div>
 
 
    <div class="center">
-     <div class="products_list">
+    
+    <div data-snip="title" id="product_title">
+
+       <div id="cart_symbol">
+         <a href="#"><img src="/images/cart.png"/></a>
+       </div>   
+
+     </div>
+     
+     <div class="item_list">
        <ul>
          <li data-snip="item">
            <a>
