--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -40,8 +40,8 @@
          <li data-snip="item">
            <a>
              <div class="item_box">
-               <div class="price_tag">
-                 <div class="price_tag_text"></div>
+               <div class="info_tag cat_tag">
+                 <div class="info_tag_text cat_text"></div>
                </div>
              </div>
            </a>
