--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-
+  <link href="http://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" type="text/css"/>
   <link href="/styles/style.css" rel="stylesheet" type="text/css"/>
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js" />
   <script type="text/javascript" src="/scripts/jquery.cookie.js" />
@@ -26,7 +26,7 @@
     <div data-snip="title" id="product_title">
 
        <div id="title_text">
-        <h1>Categorii</h1>
+        <h1 data-loc="categories"/>
        </div>
 
        <div id="cart_symbol">
