--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-
+  <link href="http://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" type="text/css"/>
   <link href="/styles/style.css" rel="stylesheet" type="text/css"/>
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js" />
   <script type="text/javascript" src="/scripts/jquery.cookie.js" />
@@ -34,6 +34,10 @@
 
      </div>
      
+     <div class="navigation">
+       <a href="/" data-loc="categories"></a>
+     </div>
+
      <div class="item_list">
        <ul>
          <li data-snip="item">
