--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -14,10 +14,7 @@
    <div class="header">
      <div id="site_name"><a href="/">Handmade</a></div>
 
-     <div id="cart_popup">
-       <div id="cart_content">
-       </div>
-     </div>
+     <div data-snip="cart_popup" />
    </div>
 
 
@@ -39,7 +36,7 @@
        <ul>
          <li data-snip="item">
            <a>
-             <div class="item_box">
+             <div class="cat_box">
                <div class="info_tag cat_tag">
                  <div class="info_tag_text cat_text"></div>
                </div>
