--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -14,10 +14,7 @@
    <div class="header">
      <div id="site_name"><a href="/">Handmade</a></div>
 
-     <div id="cart_popup">
-       <div id="cart_content">
-       </div>
-     </div>
+     <div data-snip="cart_popup" />
    </div>
 
 
