--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -2,7 +2,7 @@
  <head>
   <link href="http://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" type="text/css"/>
   <link href="/styles/style.css" rel="stylesheet" type="text/css"/>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js" />
+  <script type="text/javascript" src="/scripts/jquery-2.0.3.min.js" />
   <script type="text/javascript" src="/scripts/jquery.cookie.js" />
   <script type="text/javascript" src="/scripts/cart.js" />
   <script type="text/javascript" src="/scripts/categories.js" />
