--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -12,7 +12,7 @@
  <body>
  
    <div class="header">
-     <div id="site_name"><a href="/">Handmade</a></div>
+     <div id="site_name"><a href="/">I-Did</a></div>
 
      <div data-snip="cart_popup" />
    </div>
