--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -7,14 +7,15 @@
   <script type="text/javascript" src="/scripts/purl.js" />
   <script type="text/javascript" src="/scripts/cart.js" />
   <script type="text/javascript" src="/scripts/product.js" />
-  <script type="text/javascript" src="/scripts/jquery.zoom.min.js" />
+  <script type="text/javascript" src="/scripts/jquery.elevateZoom-3.0.8.min.js" />
+  
 
  </head>
  
  <body>
  
    <div class="header">
-     <div id="site_name"><a href="/">Handmade</a></div>
+     <div id="site_name"><a href="/">I-Did</a></div>
 
      <div data-snip="cart_popup" />
    </div>
@@ -41,14 +42,9 @@
      
      <div id="pleft">
        <div data-snip="images">
-         <div class="detail_box">
+         <div id="detail_box">
            <b:img/>
          </div>
-         <ul>
-           <f:li>
-             <f:img class="thumb"/>
-           </f:li>
-         </ul>
        </div>
      </div>
      <div id="pright">
