--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -1,47 +1,18 @@
 <html>
 <head>
-  <link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css' />
-  <link href="/styles/style.css" rel="stylesheet" type="text/css" />
-  <script type="text/javascript" src="/scripts/jquery-2.0.3.min.js"></script>
-  <script type="text/javascript" src="/scripts/jquery.cookie.js"></script>
-  <script type="text/javascript" src="/scripts/common.js"></script>
-  <script type="text/javascript" src="/scripts/categories.js"></script>
+<link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css' />
+<link href="/styles/style.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="/scripts/jquery-2.0.3.min.js"></script>
+<script type="text/javascript" src="/scripts/jquery.cookie.js"></script>
+<script type="text/javascript" src="/scripts/common.js"></script>
+<script type="text/javascript" src="/scripts/categories.js"></script>
 </head>
 
 <body>
   <div class="wrap">
-    <div class="header">
-      <div id="site_name">
-        <a href="/">iDid</a>
-      </div>
-
-      <div data-snip="cart_popup"></div>
-
-      <div data-snip="title" id="product_title">
-
-        <div id="cart_symbol">
-          <a href="#"><img src="/images/cart.png" /></a>
-        </div>
-
-        <div id="title_text">
-          <h1 data-loc="categories"></h1>
-        </div>
-        
-        <div id="search">
-          <div>
-            <input id="search_text" type="text" />
-          </div>
-          <img src="/images/search.png" />
-        </div>
-
-      </div>
-
-    </div>
-
+    <div data-snip="header"></div>
 
     <div class="center">
-
-
       <div id="item_list">
         <ul>
           <li data-snip="item"><a>
@@ -55,14 +26,8 @@
       </div>
     </div>
   </div>
-  <div class="footer">
-    <div class="center">
-      <ul>
-        <li>Copyright (c) 2014</li>
-        <li>Contact: office@idid.ro</li>
-      </ul>
-    </div>
-  </div>
+
+  <div data-snip="footer"></div>
 
 </body>
 </html>
