--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -12,39 +12,13 @@
 
 <body>
   <div class="wrap">
-    <div class="header">
-      <div id="site_name">
-        <a href="/">iDid</a>
-      </div>
-
-      <div data-snip="cart_popup"></div>
-
-      <div data-snip="title" id="product_title">
-
-        <div id="cart_symbol">
-          <a href="#"><img src="/images/cart.png" /></a>
-        </div>
-
-        <div id="title_text">
-          <span></span>
-        </div>
-        <div id="search">
-          <div>
-            <input id="search_text" type="text" />
-          </div>
-          <img src="/images/search.png" />
-        </div>
-      </div>
-    </div>
-
+    <div data-snip="header"></div>
 
     <div class="center">
-
       <div class="navigation">
         <a href="/" data-loc="categories"></a> <span>/</span>
-        <div data-snip="catlink" ></div>
+        <div data-snip="catlink"></div>
       </div>
-
       <div id="pleft">
         <div data-snip="images">
           <div id="detail_box">
@@ -56,7 +30,7 @@
         <div class="prod_details">
           <div class="prod_header">
             <div class="detailPrice">
-              <span data-snip="detailPrice" ></span>
+              <span data-snip="detailPrice"></span>
             </div>
             <div id="add_to_cart_box">
               <a id="add_to_cart" href="#" data-loc="add_to_cart"></a>
@@ -69,15 +43,8 @@
       </div>
     </div>
   </div>
-  <div class="footer">
-    <div class="center">
-      <ul>
-        <li>Copyright (c) 2014</li>
-        <li>Contact: office@idid.ro</li>
-      </ul>
-    </div>
-  </div>
-
+  
+  <div data-snip="footer"></div>
 </body>
 </html>
 
