--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -10,31 +10,7 @@
 
 <body>
   <div class="wrap">
-    <div class="header">
-      <div id="site_name">
-        <a href="/">iDid</a>
-      </div>
-
-      <div data-snip="cart_popup"></div>
-
-      <div data-snip="title" id="product_title">
-
-        <div id="cart_symbol">
-          <a href="#"><img src="/images/cart.png" /></a>
-        </div>
-
-        <div id="title_text">
-          <span></span>
-        </div>
-
-        <div id="search">
-          <div>
-            <input id="search_text" type="text" />
-          </div>
-          <img src="/images/search.png" />
-        </div>
-      </div>
-    </div>
+    <div data-snip="header"></div>
 
     <div class="center">
       <div class="navigation">
@@ -55,13 +31,6 @@
       </div>
     </div>
   </div>
-  <div class="footer">
-    <div class="center">
-      <ul>
-        <li>Copyright (c) 2014</li>
-        <li>Contact: office@idid.ro</li>
-      </ul>
-    </div>
-  </div>
+  <div data-snip="footer"></div>
 </body>
 </html>
