--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -23,6 +23,9 @@
               <div class="item_box">
                 <div class="info_tag">
                   <div class="info_tag_text"></div>
+                  <div class="info_tag_icons">
+                    <img src="/images/cart.png" />
+                  </div>
                   <div class="info_tag_price"></div>
                 </div>
               </div>
