--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -19,17 +19,17 @@
 
       <div id="item_list">
         <ul>
-          <li data-snip="item"><a>
-              <div class="item_box">
-                <div class="info_tag">
-                  <div class="info_tag_text"></div>
-                  <div class="info_tag_icons">
-                    <img src="/images/cart.png" />
-                  </div>
-                  <div class="info_tag_price"></div>
+          <li data-snip="item">
+            <div class="item_box">
+              <div class="info_tag">
+                <div class="info_tag_text"></div>
+                <div class="info_tag_cart ">
+                  <img src="/images/cart.png" />
                 </div>
+                <div class="info_tag_price"></div>
               </div>
-          </a></li>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
