--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -15,13 +15,13 @@
     <div class="center">
       <div id="item_list">
         <ul>
-          <li data-snip="item"><a>
-              <div class="cat_box">
-                <div class="info_tag cat_tag">
-                  <div class="info_tag_text cat_text"></div>
-                </div>
+          <li data-snip="item">
+            <div class="cat_box">
+              <div class="info_tag cat_tag">
+                <div class="info_tag_text cat_text"></div>
               </div>
-          </a></li>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
