--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -15,35 +15,37 @@
     <div data-snip="header"></div>
 
     <div class="center">
-      <div class="navigation">
-        <a href="/" data-loc="categories"></a> <span>/</span>
-        <div data-snip="catlink"></div>
-      </div>
-      <div id="pleft">
-        <div data-snip="images">
-          <div id="detail_box">
-            <b:img />
+      <div class="product_content">
+        <div class="navigation">
+          <a href="/" data-loc="categories"></a> <span>/</span>
+          <div data-snip="catlink"></div>
+        </div>
+        <div id="pleft">
+          <div data-snip="images">
+            <div id="detail_box">
+              <b:img />
+            </div>
           </div>
         </div>
-      </div>
-      <div id="pright">
-        <div class="prod_details">
-          <div class="prod_header">
-            <div class="detailPrice">
-              <span data-snip="detailPrice"></span>
+        <div id="pright">
+          <div class="prod_details">
+            <div class="prod_header">
+              <div class="detailPrice">
+                <span data-snip="detailPrice"></span>
+              </div>
+              <div id="add_to_cart_box">
+                <a id="add_to_cart" href="#" data-loc="add_to_cart"></a>
+              </div>
             </div>
-            <div id="add_to_cart_box">
-              <a id="add_to_cart" href="#" data-loc="add_to_cart"></a>
+            <div class="prod_desc">
+              <div data-snip="details"></div>
             </div>
-          </div>
-          <div class="prod_desc">
-            <div data-snip="details"></div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  
+
   <div data-snip="footer"></div>
 </body>
 </html>
