--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 <link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css' />
-<link href="/styles/style.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="/scripts/jquery-2.0.3.min.js"></script>
-<script type="text/javascript" src="/scripts/jquery.cookie.js"></script>
-<script type="text/javascript" src="/scripts/purl.js"></script>
-<script type="text/javascript" src="/scripts/common.js"></script>
-<script type="text/javascript" src="/scripts/product.js"></script>
-<script type="text/javascript" src="/scripts/jquery.elevateZoom-3.0.8.min.js"></script>
+<link href="/static/styles/style.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="/static/scripts/jquery-2.0.3.min.js"></script>
+<script type="text/javascript" src="/static/scripts/jquery.cookie.js"></script>
+<script type="text/javascript" src="/static/scripts/purl.js"></script>
+<script type="text/javascript" src="/static/scripts/common.js"></script>
+<script type="text/javascript" src="/static/scripts/product.js"></script>
+<script type="text/javascript" src="/static/scripts/jquery.elevateZoom-3.0.8.min.js"></script>
 </head>
 
 <body>
@@ -30,11 +30,11 @@
         <div id="pright">
           <div class="prod_details">
             <div class="prod_header">
+              <div id="add_to_cart_box">
+                <a id="add_to_cart" href="#"><img src="/static/images/cart_black.png"/></a>
+              </div>
               <div class="detailPrice">
                 <span data-snip="detailPrice"></span>
-              </div>
-              <div id="add_to_cart_box">
-                <a id="add_to_cart" href="#" data-loc="add_to_cart"></a>
               </div>
             </div>
             <div class="prod_desc">
