--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -1,11 +1,11 @@
 <html>
 <head>
 <link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css' />
-<link href="/styles/style.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="/scripts/jquery-2.0.3.min.js"></script>
-<script type="text/javascript" src="/scripts/jquery.cookie.js"></script>
-<script type="text/javascript" src="/scripts/common.js"></script>
-<script type="text/javascript" src="/scripts/categories.js"></script>
+<link href="/static/styles/style.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="/static/scripts/jquery-2.0.3.min.js"></script>
+<script type="text/javascript" src="/static/scripts/jquery.cookie.js"></script>
+<script type="text/javascript" src="/static/scripts/common.js"></script>
+<script type="text/javascript" src="/static/scripts/categories.js"></script>
 </head>
 
 <body>
