--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -1,14 +1,15 @@
 <html>
 <head>
 <link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css' />
-<link href="/static/styles/style.css" rel="stylesheet" type="text/css" />
-<link href="/static/styles/chosen.min.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="/static/scripts/jquery-2.0.3.min.js"></script>
-<script type="text/javascript" src="/static/scripts/jquery.cookie.js"></script>
-<script type="text/javascript" src="/static/scripts/chosen.jquery.min.js"></script>
-<script type="text/javascript" src="/static/scripts/common.js"></script>
-<script type="text/javascript" src="/static/scripts/purl.js"></script>
-<script type="text/javascript" src="/static/scripts/products.js"></script>
+<link href="/static/css/style.css" rel="stylesheet" type="text/css" />
+<link href="/static/css/chosen.min.css" rel="stylesheet" type="text/css" />
+
+<script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
+<script type="text/javascript" src="/static/js/jquery.cookie.js"></script>
+<script type="text/javascript" src="/static/js/chosen.jquery.min.js"></script>
+<script type="text/javascript" src="/static/js/common.js"></script>
+<script type="text/javascript" src="/static/js/purl.js"></script>
+<script type="text/javascript" src="/static/js/products.js"></script>
 </head>
 
 <body>
