--- a/shopweb/web/terms.html
+++ b/shopweb/web/terms.html
@@ -3,11 +3,9 @@
 <link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css' />
 <link href="/static/css/style.css" rel="stylesheet" type="text/css" />
 
-
 <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
 <script type="text/javascript" src="/static/js/jquery.cookie.js"></script>
 <script type="text/javascript" src="/static/js/common.js"></script>
-<script type="text/javascript" src="/static/js/categories.js"></script>
 </head>
 
 <body>
@@ -15,16 +13,8 @@
     <div data-snip="header"></div>
 
     <div class="center">
-      <div id="item_list">
-        <ul>
-          <li data-snip="item">
-            <div class="cat_box">
-              <div class="info_tag cat_tag">
-                <div class="info_tag_text cat_text"></div>
-              </div>
-            </div>
-          </li>
-        </ul>
+      <div class="terms">
+        <h1>Termeni si conditii</h1>
       </div>
     </div>
   </div>
