--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -1,13 +1,14 @@
 <html>
 <head>
 <link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css' />
-<link href="/static/styles/style.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="/static/scripts/jquery-2.0.3.min.js"></script>
-<script type="text/javascript" src="/static/scripts/jquery.cookie.js"></script>
-<script type="text/javascript" src="/static/scripts/purl.js"></script>
-<script type="text/javascript" src="/static/scripts/common.js"></script>
-<script type="text/javascript" src="/static/scripts/product.js"></script>
-<script type="text/javascript" src="/static/scripts/jquery.elevateZoom-3.0.8.min.js"></script>
+<link href="/static/css/style.css" rel="stylesheet" type="text/css" />
+
+<script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
+<script type="text/javascript" src="/static/js/jquery.cookie.js"></script>
+<script type="text/javascript" src="/static/js/purl.js"></script>
+<script type="text/javascript" src="/static/js/common.js"></script>
+<script type="text/javascript" src="/static/js/product.js"></script>
+<script type="text/javascript" src="/static/js/jquery.elevateZoom-3.0.8.min.js"></script>
 </head>
 
 <body>
