--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -15,7 +15,7 @@
     <div data-snip="header"></div>
 
     <div class="center">
-      <div id="item_list">
+      <div id="item_list" class="cat_content">
         <ul>
           <li data-snip="item">
             <div class="cat_box">
