--- a/shopweb/web/terms.html
+++ b/shopweb/web/terms.html
@@ -1,24 +1,9 @@
-<html>
-<head>
-<link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css' />
-<link href="/static/css/style.css" rel="stylesheet" type="text/css" />
-
-<script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
-<script type="text/javascript" src="/static/js/jquery.cookie.js"></script>
-<script type="text/javascript" src="/static/js/common.js"></script>
-</head>
-
+<html data-template="common">
 <body>
-  <div class="wrap">
-    <div data-snip="header"></div>
-    <div class="center">
-      <div class="terms">
-          <h1>Termeni si conditii</h1>
-      </div>
+  <div id="content" class="center">
+    <div class="terms">
+      <h1>Termeni si conditii</h1>
     </div>
   </div>
-
-  <div data-snip="footer"></div>
-
 </body>
 </html>
