--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -1,35 +1,21 @@
-<html>
+<html data-template="common">
 <head>
-<link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css' />
-<link href="/static/css/style.css" rel="stylesheet" type="text/css" />
-
-
-<script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
-<script type="text/javascript" src="/static/js/jquery.cookie.js"></script>
-<script type="text/javascript" src="/static/js/common.js"></script>
 <script type="text/javascript" src="/static/js/categories.js"></script>
 </head>
 
 <body>
-  <div class="wrap">
-    <div data-snip="header"></div>
-
-    <div class="center">
-      <div id="item_list" class="cat_content">
-        <ul>
-          <li data-snip="item">
-            <div class="cat_box">
-              <div class="info_tag cat_tag">
-                <div class="info_tag_text cat_text"></div>
-              </div>
+  <div id="content" class="center">
+    <div id="item_list" class="cat_content">
+      <ul>
+        <li data-snip="item">
+          <div class="cat_box">
+            <div class="info_tag cat_tag">
+              <div class="info_tag_text cat_text"></div>
             </div>
-          </li>
-        </ul>
-      </div>
+          </div>
+        </li>
+      </ul>
     </div>
   </div>
-
-  <div data-snip="footer"></div>
-
 </body>
 </html>
