--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -1,53 +1,40 @@
-<html>
+<html data-template="common">
 <head>
-<link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css' />
-<link href="/static/css/style.css" rel="stylesheet" type="text/css" />
-
-<script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
-<script type="text/javascript" src="/static/js/jquery.cookie.js"></script>
-<script type="text/javascript" src="/static/js/purl.js"></script>
-<script type="text/javascript" src="/static/js/common.js"></script>
 <script type="text/javascript" src="/static/js/product.js"></script>
 <script type="text/javascript" src="/static/js/jquery.elevateZoom-3.0.8.min.js"></script>
 </head>
 
 <body>
-  <div class="wrap">
-    <div data-snip="header"></div>
-
-    <div class="center">
-      <div class="product_content">
-        <div class="navigation">
-          <a href="/" data-loc="categories"></a> <span>/</span>
-          <div data-snip="catlink"></div>
-        </div>
-        <div id="pleft">
-          <div data-snip="images">
-            <div id="detail_box">
-              <b:img />
-            </div>
+  <div id="content" class="center">
+    <div class="product_content">
+      <div class="navigation">
+        <a href="/" data-loc="categories"></a> <span>/</span>
+        <div data-snip="catlink"></div>
+      </div>
+      <div id="pleft">
+        <div data-snip="images">
+          <div id="detail_box">
+            <b:img />
           </div>
         </div>
-        <div id="pright">
-          <div class="prod_details">
-            <div class="prod_header">
-              <div id="add_to_cart_box">
-                <a id="add_to_cart" href="#"><img src="/static/images/cart_black.png" /></a>
-              </div>
-              <div class="detailPrice">
-                <span data-snip="detailPrice"></span>
-              </div>
+      </div>
+      <div id="pright">
+        <div class="prod_details">
+          <div class="prod_header">
+            <div id="add_to_cart_box">
+              <a id="add_to_cart" href="#"><img src="/static/images/cart_black.png" /></a>
             </div>
-            <div class="prod_desc">
-              <div data-snip="details"></div>
+            <div class="detailPrice">
+              <span data-snip="detailPrice"></span>
             </div>
+          </div>
+          <div class="prod_desc">
+            <div data-snip="details"></div>
           </div>
         </div>
       </div>
     </div>
   </div>
-
-  <div data-snip="footer"></div>
 </body>
 </html>
 
