--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -3,7 +3,11 @@
 <link href="/static/css/chosen.min.css" rel="stylesheet" type="text/css" />
 
 <script type="text/javascript" src="/static/js/chosen.jquery.min.js"></script>
+<script type="text/javascript" src="/static/js/jquery.elevateZoom-3.0.8.min.js"></script>
+<script type="text/javascript" src="/static/js/blockui.js"></script>
+
 <script type="text/javascript" src="/static/js/products.js"></script>
+
 </head>
 
 <body>
@@ -18,6 +22,8 @@
         <option value="bypricedesc" data-loc="sort.by.price.desc"></option>
       </select>
     </div>
+    
+    <div id="product_dialog">Hi there.</div>
 
     <div id="item_list">
       <ul>
