--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -27,6 +27,11 @@
 
     <div id="item_list">
       <ul>
+        <li data-snip="itemadd" id="itemadd">
+          <div class="item_box">
+            <img class="add_item" src="/static/images/add-item.png" />
+          </div>
+        </li>
         <li data-snip="item">
           <div class="item_box">
             <div class="info_tag">
