--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -1,13 +1,17 @@
 <html data-template="common">
 <head>
 <link href="/static/css/chosen.min.css" rel="stylesheet" type="text/css" />
+<link href="/static/css/basic.css" rel="stylesheet" type="text/css" />
+<link href="/static/css/dropzone.css" rel="stylesheet" type="text/css" />
+<link href="/static/css/jquery-te-1.4.0.css" rel="stylesheet" type="text/css" />
 
 <script type="text/javascript" src="/static/js/chosen.jquery.min.js"></script>
 <script type="text/javascript" src="/static/js/jquery.elevateZoom-3.0.8.min.js"></script>
 <script type="text/javascript" src="/static/js/blockui.js"></script>
 
 <script type="text/javascript" src="/static/js/products.js"></script>
-
+<script type="text/javascript" src="/static/js/dropzone.js"></script>
+<script type="text/javascript" src="/static/js/jquery-te-1.4.0.min.js"></script>
 </head>
 
 <body>
@@ -23,7 +27,52 @@
       </select>
     </div>
     
-    <div id="product_dialog">Hi there.</div>
+    <div id="product_dialog"></div>
+
+    <div id="product_create_dialog">
+      <div class="product_content quickview">
+        <div class="title_dialog">
+          <h1 data-loc="new.product"></h1>
+        </div>
+        <div class="close_dialog">
+          <img src="/static/images/close.png" />
+        </div>
+        <div class="content_dialog">
+          <form action="/product/image/upload" class="dropzone" id="upload_dialog">
+            <div class="upload_dialog_fields">
+          	  <div id="fields">
+          	    <div class="row">
+          	      <label for="create_title" data-loc="product.title"></label><input id="create_title" type="text"/>
+          	    </div>
+          	    <div class="row">
+          	      <label for="create_price" data-loc="product.price"></label><input id="create_price" type="number"/>
+          	    </div>
+          	    <div class="select_row">
+          	      <label for="create_select_cat" data-loc="product.categories"></label>
+                  <select id="create_select_cat" multiple="multiple">
+                    <option value="volvo">Volvo</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                  </select>
+                </div>
+                <div class="row">
+                  <label for="create_keywords" data-loc="product.keywords"></label><input id="create_keywords" type="text"/>
+                </div>
+              </div>
+              <div id="create_textzone">
+                <textarea class="editor" id="textzone"></textarea>
+              </div>
+            </div>
+            <div class="dropzone-previews"></div>
+            <div class="dz-message" data-loc="product.drag.files"></div>
+         </form>
+       </div>
+       <div class="dialog_footer">
+          <div id="create_product"><a href="#" data-loc="create.product"></a></div>
+       </div>
+      </div>
+    </div>
 
     <div id="item_list">
       <ul>
@@ -46,5 +95,6 @@
       </ul>
     </div>
   </div>
+
 </body>
 </html>
