--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -64,9 +64,12 @@
 	                  <input id="create_keywords" type="text" name="create_keywords"/>
 	                </div>
                 </div>
-                <div class="column">
-                  <div class="column"><img id="add_prop" class="clickable" src="/static/images/plus.png"/></div>
-                  <div id="prop_fields" class="column">
+                <div class="column specs">
+                  <div class="row">
+                    <div class="specs_title" data-loc="specs"></div>
+                    <img id="add_prop" class="clickable" src="/static/images/plus.png"/>
+                  </div>
+                  <div id="prop_fields" class="row">
                   </div>
                 </div>
               </div>
@@ -99,6 +102,11 @@
         </li>
         <li data-snip="item">
           <div class="item_box">
+            <div class="edit_tag">
+               <div class="edit_tag_close">
+                 <img src="/static/images/close.png" />
+               </div>
+            </div>
             <div class="info_tag">
               <div class="info_tag_text"></div>
               <div class="info_tag_cart ">
