--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -28,10 +28,13 @@
               <span data-snip="detailPrice"></span>
             </div>
           </div>
-          <ul id="product_details_tab">
-            <li class="active"><a href="#prod_desc" data-loc="description"></a></li>
-            <li><a href="#prod_specs" data-loc="specs"></a></li>
-          </ul>
+          <div class="tab_select">
+            <ul id="product_details_tab">
+              <li class="active"><a href="#prod_desc" data-loc="description"></a></li>
+              <li><a href="#prod_specs" data-loc="specs"></a></li>
+            </ul>
+          </div>
+          <div class="tab_continue"></div>
           <div id="prod_desc" class="prod_desc">
             <div data-snip="details"></div>
           </div>
