--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -2,14 +2,13 @@
 <head>
 <link href="/static/css/chosen.min.css" rel="stylesheet" type="text/css" />
 <link href="/static/css/basic.css" rel="stylesheet" type="text/css" />
-<link href="/static/css/jquery-te-1.4.0.css" rel="stylesheet" type="text/css" />
 
 <script type="text/javascript" src="/static/js/chosen.jquery.min.js"></script>
 <script type="text/javascript" src="/static/js/jquery.elevateZoom-3.0.8.min.js"></script>
 <script type="text/javascript" src="/static/js/blockui.js"></script>
+<script type="text/javascript" src="/static/js/textile.js"></script>
 
 <script type="text/javascript" src="/static/js/products.js"></script>
-<script type="text/javascript" src="/static/js/jquery-te-1.4.0.min.js"></script>
 </head>
 
 <body>
