--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -2,6 +2,7 @@
 <head>
 <script type="text/javascript" src="/static/js/product.js"></script>
 <script type="text/javascript" src="/static/js/jquery.elevateZoom-3.0.8.min.js"></script>
+<script type="text/javascript" src="/static/js/textile.js"></script>
 </head>
 
 <body>
