--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -8,8 +8,8 @@
 <script type="text/javascript" src="/static/js/blockui.js"></script>
 <script type="text/javascript" src="/static/js/textile.js"></script>
 
-<script type="text/javascript" src="/static/js/admin.js"></script>
-<script type="text/javascript" src="/static/js/products.js"></script>
+<script type="text/javascript" src="/static/js/admin.js" data-permissions="write"></script>
+<script type="text/javascript" src="/static/js/products.js" ></script>
 </head>
 
 <body>
@@ -105,7 +105,7 @@
 
     <div id="item_list">
       <ul>
-        <li data-snip="itemadd" id="itemadd">
+        <li data-snip="itemadd" id="itemadd" data-permissions="write">
           <div class="item_box">
             <img class="add_item" src="/static/images/add-item.png" />
           </div>
@@ -113,7 +113,7 @@
         <li data-snip="item">
           <div class="item_box">
             <div class="edit_tag">
-               <div class="edit_tag_close">
+               <div class="edit_tag_close" data-permissions="write">
                  <img src="/static/images/close.png" />
                </div>
             </div>
